--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.config.import=optional:file:.env[.properties]
 spring.datasource.url=jdbc:${POSTGRES_URL}
 spring.datasource.username=${POSTGRES_USER}
 spring.datasource.password=${POSTGRES_PASSWORD}
+spring.main.allow-circular-references=true
+jwt.secret=${JWT_SECRET}
