--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -3,4 +3,4 @@ COPY . /app
 WORKDIR /app
 RUN ./gradlew build
 EXPOSE 8080
-CMD ["java", "-jar", "build/libs/lennud-0.0.1-SNAPSHOT.jar"]
+CMD ["java", "-jar", "build/libs/forum-0.0.1.jar"]
