--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -5,3 +5,9 @@ spring.datasource.username=${POSTGRES_USER}
 spring.datasource.password=${POSTGRES_PASSWORD}
 spring.main.allow-circular-references=true
 jwt.secret=${JWT_SECRET}
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=${GMAIL_USER}
+spring.mail.password=${GMAIL_PASSWORD}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
